# Avoid_It

./: CMakeLists.txt  README.md  avoid_game  axe_game  hello  main  main.cpp
include/: axe.h  collider.h  game.h  goal.h  player.h
src/: axe.cc  collider.cc  game.cc  goal.cc  main.cc  player.cc
